tests/good/typing/042-rec-type.clap
type student <t> = rec s is { Dead + Alive { Has t * Friend s } }
