tests/bad/syntax/017-tree-type.clap
type tree_structure <subtree, element> = 
  { Empty 
  + Leaf element 
  + Node { Left subtree * Right subtree 
  }

type tree <element> = rec subtree is tree_structure <subtree, element>

